# My_Projects

./: .gitignore  AlgorithmRunner.py  CODE_OF_CONDUCT.md  DS_HW4.ipynb  Data.py  LICENSE  Next_Word_Prediction_1.ipynb  README.md  RaceAlgorithmRunner.py  RaceData.py  RaceRData.py  _config.yml  analysis_functions.py  analysis_functions1.py  cleaned_data.csv  features.csv  file_reader.py  index.md  labels.csv  main.py  nlp_political_bias.ipynb  political_bias_nlp.ipynb  rocchio_classifier.py  temp_results
.github/workflows/: pythonpackage.yml
.ipynb_checkpoints/: AlgorithmRunner-checkpoint.py  DS_HW4-checkpoint.ipynb  Data-checkpoint.py
Data_Structures/Stack_Example/: CMakeLists.txt  README.md  StackItem.h  main.cpp  stack.h
Data_Structures_and_Algorithms/Dynamic_Graph/: .gitignore  CMakeLists.txt  Dynamic_Graph.cpp  Dynamic_Graph.h  Graph_Edge.h  Graph_Node.cpp  Graph_Node.h  Queue.h  QueueItem.h  README.md  Rooted_Tree.cpp  Rooted_Tree.h  Tree_Node.h  main.cpp  main2.cpp  main2_output.txt  main_output.txt
Data_Structures_and_Algorithms/Stack_Example/: stack.h
Database_Management/Theoretical_DB_Schema_and_Queries/: DB_Schema_src.xml  DeleteTablesScript.sql  MainView.sql  README.md  createTablesScript.sql  (+1 more)
HW4/: main.py
Lab1/: hw1_lab_207630658_312236219.sh
Lab5/: main.py  rocchio_classifier.py
Lab6/: main.py
Multi_Comp/: Final Project.Rmd
Optimization/: README.md  cvx_solve_function_1.m  cvx_solve_function_2.m
Stack_Example/: README.md
Text Analysis/: Alice_book
scikit_digits_KNN_Rocchio_analysis/: README.md  analysis_functions.py  main.py
(+76 files in other folders)
